--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,13 @@
+pids
+logs
+node_modules
+npm-debug.log
+coverage/
+run
+dist
+public
 .DS_Store
-node_modules/
-/dist/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-/test/unit/coverage/
-/test/e2e/reports/
-selenium-debug.log
-
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
+.nyc_output
+.basement
+config.local.js
+basement_dist
