--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "Blog",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs",
-    "deploy": "bash deploy.sh"
+  "name": "vuepress-blog-template",
+  "version": "0.0.1",
+  "description": "A blog powered by VuePress",
+  "authors": {
+    "name": "myronyang",
+    "email": "821253835@qq.com"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "scripts": {
+    "dev": "vuepress dev blog --temp .temp",
+    "build": "vuepress build blog"
+  },
+  "license": "MIT",
   "devDependencies": {
-    "webpack-dev-server": "^2.9.7"
+    "@vuepress/plugin-back-to-top": "^1.8.2",
+    "@vuepress/theme-blog": "^2.3.2",
+    "vuepress": "^1.6.0"
   }
 }
