--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "vuepress dev blog --temp .temp",
-    "build": "vuepress build blog"
+    "build": "vuepress build blog",
+    "deploy": "bash deploy.sh"
   },
   "license": "MIT",
   "devDependencies": {
